# elfosoftware-demo-flota-transportistes

./: .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile.backend  LICENSE  README.md  SECURITY.md  check-docker.sh  deploy.sh  dev-docker.sh  dev-run.sh  dev-start.sh  docker-compose.prod.yml  get-dockerhub-token.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  start-api.sh  start-demo.sh  start-dev.sh
.devcontainer/: bashrc  devcontainer.json
.github/: CODEOWNERS  FOUNDATION_CHECKLIST.md  codeql-config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  repository-config.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  documentation.yml  feature-request.yml  feature_request.yml
.github/workflows/: README-secrets.md  ci.yml  codeql-disabled.yml  codeql.yml  deploy-docker.yml  deploy-oidc.yml  release-please.yml
apps/backend/: .gitignore  Dockerfile  Makefile  alembic.ini  cmr_api_example.py  pyproject.toml  pytest.ini  test_cmr_manual.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 940b067c0480_initial_migration.py
apps/backend/src/application/services/: create_transport_service.py  list_transport_service.py  update_transport_service.py
apps/backend/src/application/use_cases/: cmr_use_cases.py  flota_use_cases.py  transportista_use_cases.py  vehiculo_use_cases.py
apps/backend/src/domain/: exceptions.py
apps/backend/src/domain/entities/: carga.py  cmr_document.py  flota.py  transport.py  transportista.py  vehiculo.py
apps/backend/src/domain/repositories/: interfaces.py  transport_repository.py
apps/backend/src/domain/services/: cmr_normalizer.py
apps/backend/src/domain/value_objects/: direccion.py
apps/backend/src/infrastructure/persistence/: __init__.py  base.py  models.py  session.py  transport_sqlalchemy_repository.py  uow.py
apps/backend/src/infrastructure/repositories/: flota_repository.py  vehiculo_repository.py
apps/backend/src/presentation/api/: __init__.py  di.py  main.py
apps/backend/src/presentation/api/routes/: cmr_routes.py  flota_routes.py  transport_routes.py  vehiculo_routes.py
apps/backend/tests/: conftest.py  test_cmr_api.py  test_database.py  test_health.py  test_vehiculo_api.py
apps/backend/tests/application/: test_create_transport_service.py  test_update_transport_service.py
apps/backend/tests/unit/: test_carga.py  test_cmr_domain.py  test_flota.py  test_transportista.py  test_vehiculo.py
apps/web/: # Code Citations.md  .eslintrc.json  CHANGELOG.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/app/: ClientLayout.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/api/vehicles/: route.ts
apps/web/app/vehicles/: page.tsx
apps/web/components/: Layout.tsx  VehiclesPage.tsx
infra/: compose.yml  docker-compose.yml
src/: __init__.py  main.py
src/elfosoftware_flota/: __init__.py
src/elfosoftware_flota/application/: __init__.py
src/elfosoftware_flota/application/services/: __init__.py
src/elfosoftware_flota/application/use_cases/: __init__.py  transportista_use_cases.py
src/elfosoftware_flota/domain/: __init__.py
src/elfosoftware_flota/domain/entities/: __init__.py  flota.py  transportista.py  vehiculo.py
src/elfosoftware_flota/domain/repositories/: __init__.py  i_flota_repository.py  i_transportista_repository.py  i_vehiculo_repository.py
src/elfosoftware_flota/domain/services/: __init__.py  gps_services.py
src/elfosoftware_flota/domain/value_objects/: __init__.py  matricula.py
src/elfosoftware_flota/infrastructure/: __init__.py  dependencies.py
src/elfosoftware_flota/infrastructure/external_services/: __init__.py
src/elfosoftware_flota/infrastructure/persistence/: __init__.py  database.py  inmemory_vehicle_repository.py  models.py
src/elfosoftware_flota/infrastructure/repositories/: __init__.py  flota_repository.py  inmemory_transportista_repository.py  inmemory_vehicle_repository.py
src/elfosoftware_flota/presentation/: __init__.py
src/elfosoftware_flota/presentation/api/: __init__.py  flota_api.py  transportista_api.py  vehiculo_api.py
src/elfosoftware_flota/presentation/controllers/: __init__.py
src/elfosoftware_flota/presentation/dto/: __init__.py  flota_dto.py  transportista_dto.py  vehiculo_dto.py
tests/: test_gps_services.py  test_transportista_api.py
tests_unit/: __init__.py  test_domain_entities.py
