[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_sdist"

[project]
name = "elfosoftware-demo-flota-transportistes-backend"
version = "0.1.0"
description = "Backend API for Elfosoftware Demo Flota Transportistes"
authors = [
    {name = "Elfosoftware", email = "demo@elfosoftware.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dateutil>=2.8.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "isort>=5.12.0"
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
